# NN

./: .gitignore  CMakeLists.txt  NN.hpp  README.md
builder/: dataLoader.cpp  gui.cpp  main.cpp
builder/include/: dataLoader.hpp  gui.hpp
glad/include/glad/: glad.h
glad/src/: glad.c
net/: CMakeLists.txt
net/include/: net.hpp
net/src/: net.cpp
src/: dataLoader.cpp  gui.cpp  main.cpp  net.cpp
src/include/: cli.hpp  dataLoader.hpp  gui.hpp  net.hpp
src/manager/: cli.cpp  dataLoader.cpp  main.cpp
src/manager/include/: cli.hpp
src/neural/: CMakeLists.txt  net.cpp
src/neural/include/: net.hpp
